# goodies

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  PROGRESS.md  PROMPT_M2.md  README.md  SESSION_M2.md  SESSION_M3.md  SESSION_M4.md  docker-compose.yml  fly.toml  skills-lock.json
.claude/: settings.json
.githooks/: pre-commit
api/: .dockerignore  Dockerfile  alembic.ini  config.py  fly.toml  health.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/auth/: dependencies.py  router.py  security.py
api/db/: connection.py
api/db/migrations/: env.py  script.py.mako
api/db/migrations/versions/: 0001_initial_users.py  0002_refresh_token_hash.py  0003_ledger.py  0004_categories.py  0005_notes_account_number.py  0006_transaction_kind.py  0007_portfolio.py  0008_asset_prices.py  0009_caixinha_classify_patterns.py
api/engines/ledger/: accounts.py  alerts.py  cashflow.py  categories.py  fixed_costs.py  import_routes.py  importer.py  router.py  service.py  transactions.py
api/engines/market/: cache.py  models.py  router.py  service.py
api/engines/market/fetchers/: __init__.py  base.py  brapi.py  coingecko.py  treasury.py
api/engines/portfolio/: __init__.py  analytics_router.py  b3_import.py  caixinhas.py  constants.py  migration.py  operations.py  rf_cdi.py  rf_pre.py  router.py  service.py  targets.py  xirr.py
api/hermes/: router.py
api/scripts/: gen_hermes_token.py  migrate_ledger.py  reclassify_caixinhas.py  reset_ledger.py  seed_admin.py
api/tests/: conftest.py  test_health_check.py  test_health_integration.py
api/tests/auth/: test_auth_routes.py  test_security.py
api/tests/db/: conftest.py  test_connection.py
api/tests/ledger/: conftest.py  test_accounts.py  test_alerts.py  test_cashflow.py  test_categories.py  test_fixed_costs.py  test_hermes.py  test_import_endpoint.py  test_importer.py  test_ledger_schema.py  test_projection.py  test_reclassify_caixinhas.py  test_service_alerts.py  test_transactions.py
api/tests/market/: conftest.py  test_brapi.py  test_cache.py  test_coingecko.py  test_fallback.py  test_fetcher_base.py  test_integration.py  test_router.py  test_treasury.py  test_workers.py
api/tests/portfolio/: conftest.py  test_allocation.py  test_b3_import.py  test_constants.py  test_dca.py  test_eval_date.py  test_income.py  test_ir_crypto.py  test_ir_estimate.py  test_migration.py  test_operations.py  test_positions.py  test_rebalancing.py  test_rf_cdi.py  test_rf_pre.py  test_schema.py  test_seed_caixinhas.py  test_targets.py  test_upsert_price.py  test_xirr.py  test_xirr_endpoint.py  test_xirr_partial.py
api/workers/: price_workers.py  scheduler.py
docs/: 00_Brief.md  01_PRD.md  02_Arquitetura.md  03_Stack.md  04_UX.md  07_Decisoes.md  08_Contexto_Financeiro.md  DEPLOY.md  (+8 more)
(+85 files in other folders)
