[project]
name = "goodies-api"
version = "0.0.0"
description = "Goodies — backend FastAPI (ledger, portfolio, market, analytics)"
requires-python = ">=3.12"
readme = "../README.md"

# Stack travada por ADR-001 / docs/03_Stack.md. Versões em piso (>=) — fixar no lock.
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",          # Postgres direto, sem ORM (conventions.md)
    "redis>=5.0",             # redis[asyncio] — cache Upstash
    "httpx>=0.27",            # fetchers de mercado / wallets
    "apscheduler>=3.10",      # workers no processo FastAPI (ADR-003, não Celery)
    "scipy>=1.13",            # XIRR via brentq (ADR-002)
    "python-jose[cryptography]>=3.3",  # JWT custom (ADR-006)
    "passlib[bcrypt]>=1.7",            # hash de senha (ADR-006)
    "bcrypt>=4,<5",                    # passlib 1.7.4 quebra com bcrypt 5 (00-05)
    "structlog>=24.1",        # logs estruturados (m6)
    "alembic>=1.13",          # migrations Postgres (00-03)
    "openpyxl>=3.1",
]

# Dev/test tools (PEP 735) — instalados por padrão no `uv sync`; excluídos com `--no-dev` (imagem).
[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

# App roda a partir do código-fonte (cwd = /app, pythonpath="."), não como wheel instalado.
# uv gerencia só o ambiente (.venv) + deps; não builda nem instala o projeto. (ADR-010)
[tool.uv]
package = false

# ---- Ruff: lint + format (substitui black) — conventions.md ----
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
# stdlib -> third-party -> local, com linha em branco (conventions.md)
known-first-party = ["engines", "workers", "hermes", "auth", "db"]

[tool.ruff.format]
quote-style = "double"

# ---- mypy --strict — sem Any sem justificativa (conventions.md) ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# asyncpg/passlib não publicam stubs (py.typed) — ignora missing imports só p/ eles.
[[tool.mypy.overrides]]
module = ["asyncpg.*", "passlib.*", "jose.*"]
ignore_missing_imports = true

# ---- pytest + pytest-asyncio ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

# ---- Cobertura: >=80% nas engines críticas (Portfolio, Analytics) ----
[tool.coverage.run]
branch = true
source = ["engines"]

[tool.coverage.report]
show_missing = true
# Gate de cobertura aplicado nas engines críticas via /test
